--- a/resources/[esx]/esx_phone/html/ui_br.html
+++ b/resources/[esx]/esx_phone/html/ui_br.html
@@ -17,14 +17,14 @@
 				
 				<div class="menu">
 					<ul class="home">
-						<li class="phone-icon" id="phone-icon-rep">Repertório</li>
+						<li class="phone-icon" id="phone-icon-rep">Contatos</li>
 						<li class="phone-icon" id="phone-icon-msg">Mensagens</li>
 					</ul>
 				</div>
 
 				<div id="repertoire" class="screen">
 				
-				<div class="head-screen"><span id="btn-head-back-rep" class="btn-head btn-head-back"></span>Répertoire<span id="btn-head-new-contact" class="btn-head btn-head-new"></span></div>
+				<div class="head-screen"><span id="btn-head-back-rep" class="btn-head btn-head-back"></span>Contatos<span id="btn-head-new-contact" class="btn-head btn-head-new"></span></div>
 					<div class="container">
 						<div class="content-screen repertoire-list">
 							<div class="contact no-item online">
@@ -50,7 +50,7 @@
 					<div class="container">
 						<div class="content-screen">
 							<input type="hidden" id="writer_number" value="0" />
-							<textarea id="writer_message" placeholder="Votre message"></textarea>
+							<textarea id="writer_message" placeholder="Sua mensagem"></textarea>
 							<label><input type="checkbox" id="writer_anonyme" value="true">Anônimo</label>
 							<button id="writer_cancel">Cancelar</button>
 							<button id="writer_send" class="marged">Enviar</button>
@@ -62,8 +62,8 @@
 					<div class="head-screen"><span id="btn-head-back-contact" class="btn-head btn-head-back"></span>Adicionar um Contato</div>
 					<div class="container">
 						<div class="content-screen">
-							<input type="text" id="contact_name" placeholder="Nom" />
-							<input type="text" id="contact_number" placeholder="Numéro" />
+							<input type="text" id="contact_name" placeholder="Nome" />
+							<input type="text" id="contact_number" placeholder="Número" />
 							<button id="contact_cancel">Cancelar</button>
 							<button id="contact_send">Enviar</button>
 						</div>
