--- a/resources/[esx]/esx_dmvschool/html/ui_fr.html
+++ b/resources/[esx]/esx_dmvschool/html/ui_fr.html
@@ -8,14 +8,14 @@
 		<div class="question-container">
 			<!-- header -->
 			<div class="header">
-				<h1>Auto-escole</h1>
+				<h1>Auto-école</h1>
 			</div>
 			<!-- home -->
 			<div class="body home">
 				<div class="content">
 					<!-- ICI BREVE PRESENTATION --> 
-					<center><img src="dmv.png" class="logo"><br><p class="bold-text">Bem-vindo a Auto-escola</center>
-					<br><center>Todos as pessoas dessa cidade precisam estar devidamente habilitadas para poder conduzir um veículo.<br>Nossa prova teórica serve para testar seu conhecimentoPrenez votre temps, répondez avec du bon sens, ne répondez pas au hasard.<br><br></center>
+					<center><img src="dmv.png" class="logo"><br><p class="bold-text">Bienvenu à votre Auto-école</center>
+					<br><center>Tous les citoyens de Los Santos doivent réussir leur examen de code avant de pouvoir conduire.<br>Prenez votre temps, répondez avec du bon sens, ne répondez pas au hasard.<br><br></center>
 					Examen de Code<br>
 					- L'examen de code coute 200$, cela n'est pas remboursé si vous échouez.<br>
 					- N'ayez pas peur, l'auto-école accepte les crédits, mais faite attention à ne pas vous endetter<br>
