--- a/resources/[esx]/esx_dmvschool/html/ui.html
+++ b/resources/[esx]/esx_dmvschool/html/ui.html
@@ -8,27 +8,27 @@
 		<div class="question-container">
 			<!-- header -->
 			<div class="header">
-				<h1>Auto-école</h1>
+				<h1>Auto-escola</h1>
 			</div>
 			<!-- home -->
 			<div class="body home">
 				<div class="content">
 					<!-- ICI BREVE PRESENTATION --> 
-					<center><img src="dmv.png" class="logo"><br><p class="bold-text">Bienvenu à votre Auto-école</center>
-					<br><center>Tous les citoyens de Los Santos doivent réussir leur examen de code avant de pouvoir conduire.<br>Prenez votre temps, répondez avec du bon sens, ne répondez pas au hasard.<br><br></center>
-					Examen de Code<br>
-					- L'examen de code coute 200$, cela n'est pas remboursé si vous échouez.<br>
-					- N'ayez pas peur, l'auto-école accepte les crédits, mais faite attention à ne pas vous endetter<br>
-					- Si vous loupez votre test une première fois, vous ne pouvez pas le repasser de suite, vous devrez le retenter un autre jour.<br><br>
-					Examen de Conduite<br>
-					- L'examen de Conduite coute 500$, comme pour l'examen de code, ce paiement ne vous sera pas remboursé si vous échoué.<br>
-					- La chose principale pour votre permis c'est de faire attention à ce qui vous entoure et surtout éviter les accidents !</p>
+					<center><img src="dmv.png" class="logo"><br><p class="bold-text">Bem-vindo a Auto-escola</center>
+					<br><center>Todos as pessoas dessa cidade precisam estar devidamente habilitadas para poder conduzir um veículo.<br>Nossa prova teórica serve para testar seu conhecimento sobre nossas leis de trânsito. Tome seu tempo e responda com bom senso.<br><br></center>
+					Prova Teórica CNH<br>
+					- Para fazer esta prova você paga R$200 e não é reembolsado caso for reprovado.<br>
+					- Não tenha medo, a auto-escola aceitas crédito, mas tome cuidado para não entrar em dívidas.<br>
+					- Se você reprovou no teste pela primeira vez, você deve voltar outro dia para tentar novamente.<br><br>
+					Prova Prática CNH<br>
+					- A prova prática custa R$500, como a prova teórica, caso você reprovar não será reembolsado.<br>
+					- Você será avaliado pela sua atenção no trânsito e especialmente por evitar acidentes.</p>
 				</div>
 				<div class="buttonspot">
-				<a href="#" class="button btnQuestion">Démarrer</a>
+				<a href="#" class="button btnQuestion">Começar</a>
 				</div>
 				<div class ="barre-progression" >
-					<h2>Progrès</h2>
+					<h2>Avançar</h2>
 					<progress class="progression" value="0" max="10" >
 				</div>
 			</div>
@@ -54,36 +54,36 @@
 							<input type="radio" name="question" id="answerD" value="D">
 							<label class="answerD"></label>
 						</div>
-	              		<button type="submit" id="submit" class="submit">Prochaine question</button>
+	              		<button type="submit" id="submit" class="submit">Próxima Pergunta</button>
 	          		</form>
 				</div>
 				<div class ="barre-progression">
-					<h2>Progrès</h2>
+					<h2>Avançar</h2>
 					<progress class="progression" value="0" max="10" >
 				</div>
 			</div>
 			<!-- Résults -->
 			<div class="body resultGood">
 				<div class="content">
-					<center><p class="bold-text">Bon travail !</p><br><br>Vous avez bien travaillé durant l'examen!<br><br>Vous pouvez maintenant fermer cette fenètre et passer à l'examen.</center>
+					<center><p class="bold-text">Bom trabalho!</p><br><br>Você foi bem na prova teórica!<br><br>Agora você pode fechar esta janela e fazer a prova prática.</center>
 				</div>
 				<div class="buttonspot">
-				<a href="#" class="button btnClose">Fermer</a>
+				<a href="#" class="button btnClose">Fechar</a>
 				</div>
 				<div class ="barre-progression" >
-					<h2>Progrès</h2>
+					<h2>Avançar</h2>
 					<progress class="progression" value="10" max="10" >
 				</div>
 			</div>
 			<div class="body resultBad">
 				<div class="content">
-					<center><p class="bold-text">Vous avez échoué</p><br><br>Vous n'êtes pas prêt pour ce test, essayez une nouvelle fois, plus tard...<br><br></center>
+					<center><p class="bold-text">Você falhou!</p><br><br>Você ainda não está pronto para a prova, tente novamente mais tarde...<br><br></center>
 				</div>
 				<div class="buttonspot">
-				<a href="#" class="button btnKick">Fermer</a>
+				<a href="#" class="button btnKick">Fechar</a>
 				</div>
 				<div class ="barre-progression" >
-					<h2>Progrès</h2>
+					<h2>Avançar</h2>
 					<progress class="progression" value="10" max="10" >
 				</div>
 			</div>
