translations and blips fixes

--- a/resources/[esx]/esx_dmvschool/html/ui.html
+++ b/resources/[esx]/esx_dmvschool/html/ui.html
@@ -18,7 +18,7 @@
 					<br><center>Todos as pessoas dessa cidade precisam estar devidamente habilitadas para poder conduzir um veículo.<br>Nossa prova teórica serve para testar seu conhecimento sobre nossas leis de trânsito. Tome seu tempo e responda com bom senso.<br><br></center>
 					Prova Teórica CNH<br>
 					- Para fazer esta prova você paga R$200 e não é reembolsado caso for reprovado.<br>
-					- Não tenha medo, a auto-escola aceitas crédito, mas tome cuidado para não entrar em dívidas.<br>
+					- Não tenha medo, a auto-escola aceita crédito, mas tome cuidado para não ficar endividado.<br>
 					- Se você reprovou no teste pela primeira vez, você deve voltar outro dia para tentar novamente.<br><br>
 					Prova Prática CNH<br>
 					- A prova prática custa R$500, como a prova teórica, caso você reprovar não será reembolsado.<br>
@@ -65,7 +65,7 @@
 			<!-- Résults -->
 			<div class="body resultGood">
 				<div class="content">
-					<center><p class="bold-text">Bom trabalho!</p><br><br>Você foi bem na prova teórica!<br><br>Agora você pode fechar esta janela e fazer a prova prática.</center>
+					<center><p class="bold-text">Bom trabalho!</p><br><br>Você foi aprovado na prova teórica!<br><br>Agora você pode fechar esta janela e fazer a prova prática.</center>
 				</div>
 				<div class="buttonspot">
 				<a href="#" class="button btnClose">Fechar</a>
