--- a/resources/[esx]/esx_aiomenu/client/html/UI-en.html
+++ b/resources/[esx]/esx_aiomenu/client/html/UI-en.html
@@ -283,16 +283,16 @@
     <body>
 		<div class="general">
 			<div class="main">			
-				<button class="phone_num">Compartilhar Celular</button>
-				<button class="show_id">Compartilhar Identidade</button>
-				<button class="lock">Trancar/Destrancar Veículo</button>	
+				<button class="phone_num">Give Phone Number</button>
+				<button class="show_id">Show ID</button>
+				<button class="lock">Toggle Vehicle Locks</button>	
 				<div class="vehicle">
-					<button id="veh_gui">Veículo</button>
+					<button id="veh_gui">Vehicle Actions</button>
 				</div>
-				<button id="char_gui">Personagem</button>	
-				<button id="esx_gui">ROLEPLAY</button>
-				<button id="job_gui">Trabalho</button>
-				<button id="exitgen_gui">Sair</button>
+				<button id="char_gui">Character Actions</button>	
+				<button id="esx_gui">ESX Actions</button>
+				<button id="job_gui">Job Actions</button>
+				<button id="exitgen_gui">Exit</button>
 			</div>
 
 		</div>
@@ -300,85 +300,85 @@
 		<div class="esx">
 			<div class="main">
 				<div class="inventory">
-					<button id="inv_gui">Inventário</button>
+					<button id="inv_gui">Inventory</button>
 				</div>
 				<div class="phone">
-					<button id="phone_gui">Celular</button>
+					<button id="phone_gui">Phone</button>
 				</div>
 				<div class="billing">
-					<button id="invoice_gui">Faturas</button>
+					<button id="invoice_gui">Invoices</button>
 				</div>
 				<div class="animations">
-					<button id="anim_gui">Animações</button>
+					<button id="anim_gui">Animations</button>
 				</div>
-				<button class="voice">Alcance da Voz</button>
-				<button id="gen2_gui">Voltar</button>
-				<button id="exitesx_gui">Sair</button>
+				<button class="voice">Voice Range</button>
+				<button id="gen2_gui">Back</button>
+				<button id="exitesx_gui">Exit</button>
 			</div>
 		</div>
 		
 		<div class="jobs">
 			<div class="main">
 				<div class="ambulance">
-					<button id="amb_gui">Ambulância</button>
+					<button id="amb_gui">Ambulance</button>
 				</div>
 				<div class="police">
-					<button id="pol_gui">Polícia</button>
+					<button id="pol_gui">Police</button>
 				</div>
 				<div class="taxi">
-					<button id="taxi_gui">Táxi</button>
+					<button id="taxi_gui">Taxi</button>
 				</div>
 				<div class="mechanic">
-					<button id="mec_gui">Mecânico</button>
+					<button id="mec_gui">Mechanic</button>
 				</div>
 				<div class="fire">
-					<button id="fire_gui">Bombeiro</button>
+					<button id="fire_gui">Fire</button>
 				</div>
-				<button id="gen3_gui">Voltar</button>
-				<button id="exitjob_gui">Sair</button>
+				<button id="gen3_gui">Back</button>
+				<button id="exitjob_gui">Exit</button>
 			</div>
 		</div>
 		
 		<div class="vehicles">
 			<div class="main">
-				<button class="toggle_engine">Ligar/Desligar Motor</button>
-				<button id="window_gui">Controle das Janelas</button>
-				<button id="door_gui">Controle das Portas</button>
-				<button id="gen4_gui">Voltar</button>
-				<button id="exitveh_gui">Sair</button>
+				<button class="toggle_engine">Toggle Engine</button>
+				<button id="window_gui">-Window Controls-</button>
+				<button id="door_gui">-Door Controls-</button>
+				<button id="gen4_gui">Back</button>
+				<button id="exitveh_gui">Exit</button>
 			</div>
 		</div>
 		
 		<div class="doors">
 			<div class="main">
-				<button class="toggle_hood">Abrir/Fechar Capô</button>
-				<button class="toggle_trunk">Abrir/Fechar Porta-malas</button>
-				<button class="toggle_fldoor">Abrir/Fechar Porta Dianteira Esquerda</button>
-				<button class="toggle_frdoor">Abrir/Fechar Porta Dianteira Direita</button>
-				<button class="toggle_rldoor">Abrir/Fechar Porta Traseira Esquerda</button>
-				<button class="toggle_rrdoor">Abrir/Fechar Porta Traseira Direita</button>
-				<button id="veh2_gui">Voltar</button>
-				<button id="exitveh2_gui">Sair</button>
+				<button class="toggle_hood">Toggle Hood</button>
+				<button class="toggle_trunk">Toggle Trunk</button>
+				<button class="toggle_fldoor">Toggle Front Left Door</button>
+				<button class="toggle_frdoor">Toggle Front Right Door</button>
+				<button class="toggle_rldoor">Toggle Back Left Door</button>
+				<button class="toggle_rrdoor">Toggle Back Right Door</button>
+				<button id="veh2_gui">Back</button>
+				<button id="exitveh2_gui">Exit</button>
 			</div>
 		</div>
 		
 		<div class="windows">
 			<div class="main">
-				<button class="toggle_windowsup">Fechar Janela</button>
-				<button class="toggle_windowsdown">Abrir Janela</button>
-				<button id="veh3_gui">Voltar</button>
-				<button id="exitveh3_gui">Sair</button>
+				<button class="toggle_windowsup">Windows Up</button>
+				<button class="toggle_windowsdown">Windows Down</button>
+				<button id="veh3_gui">Back</button>
+				<button id="exitveh3_gui">Exit</button>
 			</div>
 		</div>
 		
 		<div class="characters">
 			<div class="main">
-				<button class="list_char">Lista de Personagens</button>
-				<button class="change_char">Mudar Personagem</button>
-				<button class="delete_char">Deletar Personagem</button>
-				<button id="new_gui">Novo Personagem</button>
-				<button id="gen5_gui">Voltar</button>
-				<button id="exitchar_gui">Sair</button>
+				<button class="list_char">List Characters</button>
+				<button class="change_char">Change Character</button>
+				<button class="delete_char">Delete Character</button>
+				<button id="new_gui">New Character</button>
+				<button id="gen5_gui">Back</button>
+				<button id="exitchar_gui">Exit</button>
 			</div>
 		</div>
         
