--- a/resources/[esx]/esx_bankerjob/html/fr_ui.html
+++ b/resources/[esx]/esx_bankerjob/html/fr_ui.html
@@ -12,7 +12,7 @@
 			<div class="head" style="height: 75px">
 				<h4>
 					<i class="fa fa-user"></i>
-					Banco <span id="bank-money"></span>
+					Banque <span id="bank-money"></span>
 				</h4>
 			</div>
 			<div class="head-content">
@@ -26,14 +26,14 @@
 			<div class="head" style="height: 75px">
 				<h4>
 					<i class="fa fa-user"></i>
-					Montante?
+					Montant ?
 				</h4>
 			</div>
 			<div class="head-content">
 				<form data-toggle="validator" role="form">
 					<input type="hidden" id="transfer-dialog-identifier"/>
 					<input type="text" id="transfer-dialog-amount"/>
-					<button id="transfer-dialog-send" class="btn btn-default btn-block" style="width: 100%; margin-top: 15px; border-radius: 6px">Validar</button>
+					<button id="transfer-dialog-send" class="btn btn-default btn-block" style="width: 100%; margin-top: 15px; border-radius: 6px">Valider</button>
 				</form>
 			</div>
 		</div>
@@ -42,14 +42,14 @@
 			<div class="head" style="height: 75px">
 				<h4>
 					<i class="fa fa-user"></i>
-					Montante?
+					Montant ?
 				</h4>
 			</div>
 			<div class="head-content">
 				<form data-toggle="validator" role="form">
 					<input type="hidden" id="withdraw-bank-savings-dialog-identifier"/>
 					<input type="text" id="withdraw-bank-savings-dialog-amount"/>
-					<button id="withdraw-bank-savings-dialog-send" class="btn btn-default btn-block" style="width: 100%; margin-top: 15px; border-radius: 6px">Validar</button>
+					<button id="withdraw-bank-savings-dialog-send" class="btn btn-default btn-block" style="width: 100%; margin-top: 15px; border-radius: 6px">Valider</button>
 				</form>
 			</div>
 		</div>
@@ -58,13 +58,13 @@
 			<div class="head" style="height: 75px">
 				<h4>
 					<i class="fa fa-user"></i>
-					Montante?
+					Montant ?
 				</h4>
 			</div>
 			<div class="head-content">
 				<form data-toggle="validator" role="form">
 					<input type="text" id="billing-dialog-amount"/>
-					<button id="billing-dialog-send" class="btn btn-default btn-block" style="width: 100%; margin-top: 15px; border-radius: 6px">Validar</button>
+					<button id="billing-dialog-send" class="btn btn-default btn-block" style="width: 100%; margin-top: 15px; border-radius: 6px">Valider</button>
 				</form>
 			</div>
 		</div>
@@ -73,13 +73,13 @@
 			<div class="head" style="height: 75px">
 				<h4>
 					<i class="fa fa-user"></i>
-					Montante?
+					Montant ?
 				</h4>
 			</div>
 			<div class="head-content">
 				<form data-toggle="validator" role="form">
 					<input type="text" id="withdraw-dialog-amount"/>
-					<button id="withdraw-dialog-send" class="btn btn-default btn-block" style="width: 100%; margin-top: 15px; border-radius: 6px">Validar</button>
+					<button id="withdraw-dialog-send" class="btn btn-default btn-block" style="width: 100%; margin-top: 15px; border-radius: 6px">Valider</button>
 				</form>
 			</div>
 		</div>
@@ -88,13 +88,13 @@
 			<div class="head" style="height: 75px">
 				<h4>
 					<i class="fa fa-user"></i>
-					Montante?
+					Montant ?
 				</h4>
 			</div>
 			<div class="head-content">
 				<form data-toggle="validator" role="form">
 					<input type="text" id="washmoney-dialog-amount"/>
-					<button id="washmoney-dialog-send" class="btn btn-default btn-block" style="width: 100%; margin-top: 15px; border-radius: 6px">Validar</button>
+					<button id="washmoney-dialog-send" class="btn btn-default btn-block" style="width: 100%; margin-top: 15px; border-radius: 6px">Valider</button>
 				</form>
 			</div>
 		</div>
@@ -103,13 +103,13 @@
 			<div class="head" style="height: 75px">
 				<h4>
 					<i class="fa fa-user"></i>
-					Montante?
+					Montant ?
 				</h4>
 			</div>
 			<div class="head-content">
 				<form data-toggle="validator" role="form">
 					<input type="text" id="withdraw-society-money-dialog-amount"/>
-					<button id="withdraw-society-money-dialog-send" class="btn btn-default btn-block" style="width: 100%; margin-top: 15px; border-radius: 6px">Validar</button>
+					<button id="withdraw-society-money-dialog-send" class="btn btn-default btn-block" style="width: 100%; margin-top: 15px; border-radius: 6px">Valider</button>
 				</form>
 			</div>
 		</div>
@@ -118,9 +118,9 @@
 		<div class="menu" id="menu_banque"></div>
 
 		<div id="controls">
-			<div class="controls" id="ctl_banque_actions"><img src="img/keys/return.png"/>&nbsp;Banco</div>
-			<div class="controls" id="ctl_banque"><img src="img/keys/enter.png"/>&nbsp;Banco</div>
-			<div class="controls" id="ctl_return"><img src="img/keys/return.png"/>&nbsp;Voltar</div>
+			<div class="controls" id="ctl_banque_actions"><img src="img/keys/return.png"/>&nbsp;Banque</div>
+			<div class="controls" id="ctl_banque"><img src="img/keys/enter.png"/>&nbsp;Banque</div>
+			<div class="controls" id="ctl_return"><img src="img/keys/return.png"/>&nbsp;Retour</div>
 		</div>
 
 	  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
